# bedrock-claude-chat

./: .gitignore  ADMINISTRATOR.md  AGENT.md  BOT_INSTRUCTIONS.md  CONFIGURE_KNOWLEDGE.md  PUBLISH_API.md  RAG.md  RAG_ja.md  README.md  README_ja.md  TODO.md  bin.sh  deploy.yml  docker-compose.yml  index.html  sonar-project.properties
backend/: Dockerfile  Dockerfile_websocket  README.md  auth.py  bedrock.py  embedding.Dockerfile  embedding.requirements.txt  main.py  mypy.ini  publishedApi.Dockerfile  pyproject.toml  requirements.txt  route.py  schema.py  test_bedrock.py  test_usecase.py  usecase.py  utils.py  websocket.Dockerfile
backend/api/: Dockerfile  main.py  route.py
backend/app/: agent.py  auth.py  bedrock.py  bot_remove.py  config.py  dependencies.py  main.py  prompt.py  route.py  route_schema.py  sqs_consumer.py  stream.py  usecase.py  user.py  utils.py  vector_search.py  websocket.py
backend/app/agents/: agent.py  agent_iterator.py  chain.py  langchain.py  parser.old.py  parser.py  prompt.py  prompts.py  utils.py
backend/app/repositories/: api_publication.py  (+10 more)
backend/common/: auth.py  bedrock.py  config.py  route_schema.py  test_bedrock.py  test_usecase.py  usecase.py  utils.py
backend/embedding/: Dockerfile  main.py  mix_loader.py  playwright_delay_evaluator.py  pyproject.toml  sitemap_example.xml  test.py  wrapper.py  youtube_loader.py
backend/publisher/: index.py
backend/repositories/: conversation.py  model.py  test_conversation.py
backend/s3_exporter/: index.py  requirements.txt
backend/tests/: test_bedrock.py  test_conversation.py  test_usecase.py
backend/usage_analysis/: index.py
(+353 files in other folders)
