[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.28.57"
llama-index = "^0.10.19"
pydantic = "^2.4.0"
youtube-transcript-api = "^0.6.1"
playwright = "^1.40.0"
requests = "^2.32.0"
pg8000 = "^1.30.3"
python-ulid = "^1.1.0"
pyhumps = "^3.8.0"
anthropic = {version = "^0.18.1", extras = ["bedrock"]}
langchain-core = "^0.2.1"
tenacity = "<=8.3.0"
langdetect = "^1.0.9"
unstructured = {version = "^0.14.6", extras = ["pdf","docx","xlsx","pptx","md"]}
retry = "^0.9.2"
types-retry = "^0.9.9.4"
aws-lambda-powertools = "^2.1.0"
duckduckgo-search = "^6.1.4"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
